--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,11 +1,42 @@
 <ul>
-  {{#each burger}}
+  {{#each burgerOrm}}
+   {{#unless devoured}}
   	<li>
-      <p><span class="label">Quote:</span> {{this.Burger}}</p>
+      <p><span class="label">Burger:</span> {{this.burger_name}}</p>
 
-      <button data-id="{{this.id}}" class="delquote">Delete</button>
+      <button data-id="{{this.id}}" class="Eat">Eat</button>
 
-      <a href="/{{this.id}}">Update this quote</a>
   	</li>
+    {{/unless}}
   {{/each}}
 </ul>
+<ul>
+  {{#each burgerOrm}}
+   {{#if devoured}}
+  	<li>
+      <p><span class="label">Burger:</span> {{this.burger_name}}</p>
+
+
+
+  	</li>
+    {{/if}}
+  {{/each}}
+</ul>
+
+
+<h2>Add a Burger</h2>
+<form class="create-form">
+
+  <div class="form-group">
+    <label for="ca">Burger Name</label>
+    <input type="text" id="ca" name="name">
+  </div>
+
+  <div class="form-group">
+    <label for="sleepy">Did you eat this burger already?</label><br>
+    <input type="radio" name="sleepy" value="1" > Yea duh!<br>
+    <input type="radio" name="sleepy" value="0" checked> Nope!
+  </div>
+
+  <button type="submit">Add</button>
+</form>
