--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,14 +28,14 @@
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Burger Name</label>
-    <input type="text" id="ca" name="name">
+    <label for="burgername">Burger Name</label>
+    <input type="text" id="burgername" name="name">
   </div>
 
   <div class="form-group">
-    <label for="sleepy">Did you eat this burger already?</label><br>
-    <input type="radio" name="sleepy" value="1" > Yea duh!<br>
-    <input type="radio" name="sleepy" value="0" checked> Nope!
+    <label for="devoured">Did you eat this burger already?</label><br>
+    <input type="radio" name="devoured" value="1" > Yea duh!<br>
+    <input type="radio" name="devoured" value="0" checked> Nope!
   </div>
 
   <button type="submit">Add</button>
