--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,28 @@
+<div class="container-fluid">
+<h1>Burger tracker</h1>
+<h2>track burgers you have eaten and still need to eat!</h2>
+<div class="row">
+ <div class="col-lg-6 card">
+   <div class="card-header">
+    Burgers that need to be eaten
+  </div>
 <ul>
   {{#each burgerOrm}}
    {{#unless devoured}}
   	<li>
-      <p><span class="label">Burger:</span> {{this.burger_name}}</p>
+      <p><span class="label">Burger:</span> {{this.burger_name}}  <button class="Eat btn btn-danger" data-id="{{this.id}}">Eat</button></p>
 
-      <button data-id="{{this.id}}" class="Eat">Eat</button>
+     
 
   	</li>
     {{/unless}}
   {{/each}}
 </ul>
+</div>
+<div class="col-lg-6 card">
+  <div class="card-header">
+    Burgers that have been DEVOURED
+  </div>
 <ul>
   {{#each burgerOrm}}
    {{#if devoured}}
@@ -22,8 +35,8 @@
     {{/if}}
   {{/each}}
 </ul>
-
-
+</div>
+</div>
 <h2>Add a Burger</h2>
 <form class="create-form">
 
@@ -40,3 +53,4 @@
 
   <button type="submit">Add</button>
 </form>
+</div>
